--- a/Mesher.Main/Mesher.Main.csproj
+++ b/Mesher.Main/Mesher.Main.csproj
@@ -6,4 +6,20 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+        <PackageReference Include="MQTTnet" ></PackageReference>
+        <PackageReference Include="Serilog.AspNetCore" />
+        <PackageReference Include="Serilog.Enrichers.Demystifier" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Mesher.Global\Mesher.Global.csproj" />
+      <ProjectReference Include="..\Mesher.Mesh\Mesher.Mesh.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Config\" />
+    </ItemGroup>
+
 </Project>
