--- a/Mesher.Main/Mesher.Main.csproj
+++ b/Mesher.Main/Mesher.Main.csproj
@@ -7,8 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
-        <PackageReference Include="MQTTnet" ></PackageReference>
+        <PackageReference Include="MQTTnet" />
         <PackageReference Include="Serilog.AspNetCore" />
         <PackageReference Include="Serilog.Enrichers.Demystifier" />
     </ItemGroup>
