--- a/Mesher.Main/appsettings.json
+++ b/Mesher.Main/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "User ID=mesher;Password=changeme;Host=localhost;Port=5432;Database=mesher;"
+  }
 }
