--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,15 +1,22 @@
 ﻿<Project>
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
-    <PackageVersion Include="MQTTnet" Version="5.0.1.1416" />
-    <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageVersion Include="Serilog.Enrichers.Demystifier" Version="1.0.3" />
-    <PackageVersion Include="Serilog.Settings.Configuration" Version="9.0.0" />
-    <PackageVersion Include="Serilog.Sinks.Console" Version="6.1.1" />
-    <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0" />
-  </ItemGroup>
+    <PropertyGroup>
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.1" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.1" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1" />
+        
+        <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0"/>
+        <PackageVersion Include="MQTTnet" Version="5.0.1.1416"/>
+        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
+        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="9.0.4"/>
+        <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0"/>
+        <PackageVersion Include="Serilog.Enrichers.Demystifier" Version="1.0.3"/>
+        <PackageVersion Include="Serilog.Settings.Configuration" Version="9.0.0"/>
+        <PackageVersion Include="Serilog.Sinks.Console" Version="6.1.1"/>
+        <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0"/>
+    </ItemGroup>
 </Project>
