--- a/Mesher.Main/Properties/launchSettings.json
+++ b/Mesher.Main/Properties/launchSettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "http": {
       "applicationUrl": "http://localhost:5010",
@@ -8,6 +8,7 @@
     "Mesher.Main": {
       "commandName": "Project",
       "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "Development"
       }
     }
   }
