--- a/Mesher.Main/appsettings.json
+++ b/Mesher.Main/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "User ID=mesher;Password=changeme;Host=localhost;Port=5432;Database=mesher;"
+    "default": "User ID=mesher;Password=changeme;Host=localhost;Port=5432;Database=mesher;Include Error Detail=true"
   }
 }
