some work on using meshtastic direct to maybe get even more information

--- a/Mesher.Mesh/Mesher.Mesh.csproj
+++ b/Mesher.Mesh/Mesher.Mesh.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Meshtastic" />
       <PackageReference Include="MQTTnet" />
     </ItemGroup>
 
