--- a/Mesher.Main/appsettings.json
+++ b/Mesher.Main/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "default": "User ID=mesher;Password=changeme;Host=localhost;Port=5432;Database=mesher;Include Error Detail=true"
+  },
+  "MeshServiceMQTT": {
+    "Server": "192.168.168.3",
+    "Topic": "msh/2/json/#"
   }
 }
